css/main.css
/* ... */
.custom-select > .dropdown-menu > ul > li > a:hover, 
.custom-select > .dropdown-menu > ul > li > a:focus {
    color: #fff;
    text-decoration: none;
    background-repeat: repeat-x;
}
.custom-select > .dropdown-menu > ul > li > a:hover {
    background: #4f99c6;
}
.custom-select > .dropdown-menu > ul > li > a:focus {
    background: #2283c5;
}
.custom-select > .dropdown-menu > ul > li.empty-result > em {
    text-align: center;
    padding: 4px 8px;
    display: block;
}
.custom-select > .dropdown-menu > .custom-select-action > button {
    border-radius: 0;
    background-image: none;
}

#main {
  width: 495px;
  height: 600px;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
}

#main-content {
    position: absolute;
    height: 539px;
    width: 495px;
    top: 61px;
}

#page-wrapper {
    position: absolute;
    width: 495px;
    height: 539px;
    margin-top: 0;
}

.label.label-success {
    background-color: white;
    width: 37px;
    color: #464e84;
    height: 16px;
    font-size: 11px;
    box-sizing: border-box;
    border: 1px solid #f5f5f5;
    border-radius: 2px;
    padding-top: 6.5px;
    padding-left: 3px;
    line-height: 0px;
    position: absolute;
    left: 204px;
    top: 10px;
}

.clear {
  clear: both;
}

#spinner {
    width: 40px;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    z-index: 999;
    margin-top: 48%;
}

#loading-mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 539px;
    background-color: white;
    z-index: 700;
}

.elapsed-time-unit {
    display: inline-block;
}

#alert-container {
    z-index: 999;
    position: absolute;
    width: 100%;
    text-align: center;
}

#alert-confirm {
    overflow: auto;
}

.alert-confirm-option {
    display: inline-block;
    margin-right: 10px;
    margin-left: 10px;
    cursor: pointer;
    border: 2px solid grey;
    border-radius: 4px;
    padding: 4px;
    width: 100px;
}

#alert-content {
    margin-top: 25%;
    padding: 20px;
}

.header {
    position: absolute;
    width: 495px;
    height: 61px;
    overflow: hidden;
    padding: 10px;
    top: 0px;
    left: 0px;
    box-sizing: border-box;
    background: #464e84;
}

#header-banner {
    float: left;
}


.header-icon {
    margin-left: 0px;
    float: right;
    width: 40px;
}

.header-item {
    cursor: pointer;
    position: absolute;
    left: 323px;
    top: -39px;
    width: 157px;
}


.fa-cog, .fa-external-link {
    color: #f1f1f1;
    font-size: 20px;
    padding-left: 10px;
}


.feedback-link {
    position: absolute;
    left: 18px;
    bottom: 10px;
    text-decoration: underline;
    font-weight: bold;
}

.feedback-link a {
    color: #444444;
}

.total-hours-log {
    margin-bottom: 8px;
    font-size: 14px;
    text-align: center;
    background-color: #888FBF;
    padding: 2px;
    color: #FFF;
}

.total-hours-log a {
    text-decoration: underline;
    color: #FFF; 
}

.time-entry-container {
    display: inline-block;
    vertical-align: top;
    margin-left: 0px;
    height: 65px;    
}

a.dropdown-toggle.ng-scope {
    height: 45px;
    width: 448px;
    margin-left: 23.6px;
    margin-bottom: 10px;
    background: #ffffff;
    box-sizing: border-box;
    border: 1px solid #b4b4b4;
    border-radius: 2px;
    color: #555555;
    font-size: 18px;
    padding-top: 7px;
    padding-left: 17px;
    font-size: 14px;
}

a.dropdown-toggle.ng-scope:focus, #task-dropdown:focus {
    border: 1px solid #428bca;
    border-radius: 2px;
}

.custom-select > .dropdown-menu {
    width: 448px;
    max-width: 448px;
    min-width: 448px;
    margin-left: 24px;
    margin-top: -60px;
}

#environment-options .dropdown-menu, #environment-options .dropdown-menu.ng-scope {
    min-width: 100px;
    width: 100px;
    margin-top: -227px;
    left: 9px;
}

.custom-select > .dropdown-menu > ul > li > a:hover {
    background: #337ab7;
}

.custom-select > a.dropdown-toggle > b:before {
    font-size: 14px;
    top: 6px;
}

.dropdown-menu.ng-scope {
    width: 448px;
    max-width: 448px;
}

.recent-add, .all-add {
    margin-left: 4px;
}

#notes-field {
    display: inline-block;
    float: left;
    width: 448px;
    max-width: 448px;
    height: 61px;
    max-height: 61px;
    margin-left: 23.6px;
    margin-top: 0px;
    box-sizing: border-box;
    border: 1px solid #b4b4b4;
    border-radius: 2px;
    resize: none;
    color: #555555;
}

#notes-field:focus{
    border: 1px solid #428bca;
}

.time-entry-item {
    display: inline-block;
    clear: both;
    margin-bottom: 20px;
    margin-left: 23.6px;

}

.time-entry-form-input {
    height: 60px;
    font-size: 32px;
    text-align: right;
    float: left;
    clear: both;
    box-sizing: border-box;
    border: 1px solid #b4b4b4;
    border-radius: 2px;
    color: #555555;
    border-radius: 2px;
    width: 180px;
    font-size: 23px;
    border:  1px solid #bcbcbc;
    padding: 0 0 0 8px;
    margin-right: 2px;
    text-align: center;
}


input[type="text"].time-entry-form-hours {
    font-size: 32px;
    padding-right: 12px;
}


.time-entry-form-input::-webkit-input-placeholder {
    padding-right: 12px;
    color: #555555;
}

#time-entry-item-start::-webkit-input-placeholder, #time-entry-item-end::-webkit-input-placeholder {
    padding-right: 0;
}

#time-entry-item-end {
    margin-left: 82px;
}

.notes-field-container {
    display: inline-block;
    margin-bottom: 10px;
}

.fieldtitle {
    font-size: 14px;
    font-weight: bold;
    margin-left: 23.6px;
    margin-top: 0px;
    margin-bottom: 4px;
}


.fieldtitle.time-entry {
    color: #555555;
    margin-left: 0px;
}

#field-title-timer {
    margin-bottom: 0px;
    float: right;
}

.settings-controls .tooltip > .tooltip-inner {
    background-color: #222222; 
    color: #fdfdfd; 
    border: 1px solid #222222; 
    width: 200px;
    height: auto;
    font-size: 11px;
}
/* ... */

